# spinel-cli

./: CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: introduction.md
docs/commands/: bloom.md  cache.md  generic.md  geospatial.md  hash.md  hyperloglog.md  json.md  list.md  scan.md  set.md  streams.md  string.md  zset.md
docs/development/: setup.md
docs/guides/: advanced-modes.md  scripting.md
src/: cli.rs  display.rs  main.rs  repl.rs
src/commands/: bloom.rs  cache.rs  generic.rs  geospatial.rs  hash.rs  hyperloglog.rs  json.rs  list.rs  mod.rs  scan.rs  set.rs  streams.rs  string.rs  zset.rs
